--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prisma": "^4.3.1"
   },
   "dependencies": {
-    "jsonwebtoken": "^8.5.1"
+    "@pinia/nuxt": "^0.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "pinia": "^2.0.22"
   }
 }
