--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.3.3",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
     "nuxt": "3.0.0-rc.11",
-    "prisma": "^4.3.1"
+    "postcss": "^8.4.16",
+    "prisma": "^4.3.1",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
