--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
+    "eslint": "^8.7.0",
     "nuxt": "3.0.0-rc.11",
     "postcss": "^8.4.16",
+    "prettier": "^2.5.1",
     "prisma": "^4.3.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "vue-eslint-parser": "^8.0.0"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
