added admin credentials requirement

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_URL="" prisma url used to connect to DB
 ENVIRONMENT="development" dev || production
 SMTP_HOST="localhost"  testing host ||host
 SMTP_PORT=7777 testing port || port
+ADMIN_EMAIL= # Set your admin email here
+ADMIN_PASSWORD=# Set your admin password here
