--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
     "jsonwebtoken": "^8.5.1",
-    "pinia": "^2.0.22"
+    "pinia": "^2.0.22",
+    "zod": "^3.19.1"
   }
 }
