added command for prisma seeding

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "private": true,
   "scripts": {
     "build": "nuxt build",
