--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -19,10 +22,13 @@
     "prettier": "^2.5.1",
     "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
     "vue-eslint-parser": "^8.0.0"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
+    "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "pinia": "^2.0.22",
     "zod": "^3.19.1"
