Added Fields for seeder and JWT

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ SMTP_HOST="localhost"  testing host ||host
 SMTP_PORT=7777 testing port || port
 ADMIN_EMAIL= # Set your admin email here
 ADMIN_PASSWORD=# Set your admin password here
+ADMIN_USERNAME=# Set your admin username here
+JWT_ACCESS_TOKEN_SECRET=# Set to really long string for access Token Secret
+JWT_REFRESH_TOKEN_SECRET=# Set to really long string for refresh Token Secret
