--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
     "eslint": "^8.7.0",
+    "faker": "^6.6.6",
     "nuxt": "3.0.0-rc.11",
     "postcss": "^8.4.16",
     "prettier": "^2.5.1",
