--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ ADMIN_PASSWORD=# Set your admin password here
 ADMIN_USERNAME=# Set your admin username here
 JWT_ACCESS_TOKEN_SECRET=# Set to really long string for access Token Secret
 JWT_REFRESH_TOKEN_SECRET=# Set to really long string for refresh Token Secret
+CLOUFLARE_CAPTCHA_SECRET=#Get Cloudflare captcha secret 
