--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
     "eslint": "^8.7.0",
-    "faker": "^6.6.6",
     "nuxt": "3.0.0-rc.11",
     "postcss": "^8.4.16",
     "prettier": "^2.5.1",
