--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@faker-js/faker": "^7.5.0",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
