--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.0.22",
     "zod": "^3.19.1"
   }
