--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
     "eslint": "^8.7.0",
+    "npm": "^8.19.2",
     "nuxt": "3.0.0-rc.11",
     "postcss": "^8.4.16",
     "prettier": "^2.5.1",
     "prisma": "^4.3.1",
+    "smtp-tester": "^2.0.0",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "vue-eslint-parser": "^8.0.0"
@@ -34,6 +36,7 @@
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "nodemailer-express-handlebars": "^5.0.0",
     "pinia": "^2.0.22",
     "zod": "^3.19.1"
   }
