added email smtpdetails to .env Example

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ ADMIN_USERNAME=# Set your admin username here
 JWT_ACCESS_TOKEN_SECRET=# Set to really long string for access Token Secret
 JWT_REFRESH_TOKEN_SECRET=# Set to really long string for refresh Token Secret
 CLOUFLARE_CAPTCHA_SECRET=#Get Cloudflare captcha secret 
+EMAIL_EMAIL=#Add Email Used to Auth With SMTP EMAIL
+EMAIL_PASSWORD=#Add Password Used to Auth With SMTP EMAIL
+EMAIL_HOST=#smtp host 
+EMAIL_PORT=#smtp port 
+EMAIL_NAME=#name to show up in from on email
