--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.7.0",
     "npm": "^8.19.2",
     "nuxt": "3.0.0-rc.11",
+    "nuxt-turnstile": "^0.0.7",
     "postcss": "^8.4.16",
     "prettier": "^2.5.1",
     "prisma": "^4.3.1",
