--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/tailwindcss": "^5.3.3",
     "@tailwindcss/forms": "^0.5.3",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/nodemailer": "^6.4.6",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.8.0",
