--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "pm2 startOrReload ecosystem.config.js"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
