+ wallet key to example

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ EMAIL_PASSWORD=#Add Password Used to Auth With SMTP EMAIL
 EMAIL_HOST=#smtp host 
 EMAIL_PORT=#smtp port 
 EMAIL_NAME=#name to show up in from on email
+UPHOLD_WALLET = #upholdWalletId
